--- a/app/static/track.html
+++ b/app/static/track.html
@@ -40,7 +40,7 @@
       <div class="plyrCtnShdw"></div>
       <div class="plyrCtn">
         <div class="cvShdw"></div>
-        <image src="/static/img/inwenling.jpg" id="cover" class="cv">
+        <image src="/static/img/zaiwenling.jpg" id="cover" class="cv">
   			<div class="plyrCtt">
 
 
